--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   }
   
   .header p {
-    font-family: arial;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     color: #fff;
     padding-bottom: 4px;
@@ -70,7 +70,7 @@ body {
   }
   
   .interface h3 {
-    font-family: 'Acme', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 22px;
     color: #f8b700;
     padding: 12px 0 4px;
@@ -159,14 +159,14 @@ body {
   }
   
   .enemy h3 {
-    font-family: 'Acme', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 22px;
     color: #f8b700;
     padding: 12px 0 4px;
   }
   
   .enemy p {
-    font-family: arial;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 12px;
     color: #d5c8af;
     line-height: 20px;
